[gd_scene load_steps=31 format=3 uid="uid://bkv4uk3vqkgpk"]

[ext_resource type="Script" path="res://Scripts/Characters/Enemies/goblin.gd" id="1_f3y3q"]
[ext_resource type="Texture2D" uid="uid://dr0ytd4buny54" path="res://Assets/Images/ceidass.psofos.png" id="2_ntlk8"]
[ext_resource type="Texture2D" uid="uid://5t7vgiqx0gyb" path="res://Assets/Images/ceidass.idle.png" id="3_ioxp2"]
[ext_resource type="Texture2D" uid="uid://dvyntp11wggqi" path="res://Assets/Images/ceidass.walking.png" id="4_oi7ot"]
[ext_resource type="PackedScene" uid="uid://ce10wp461kxs" path="res://Scenes/hurtbox.tscn" id="5_sgjli"]
[ext_resource type="PackedScene" uid="uid://byivnwb657ec0" path="res://Scenes/hitbox.tscn" id="6_v852v"]
[ext_resource type="AudioStream" uid="uid://uwgc2mqppsk1" path="res://Assets/Sound/enemyhit.wav" id="7_ugwmn"]
[ext_resource type="AudioStream" uid="uid://bdmnfidt7bity" path="res://Assets/Sound/enemydeath.wav" id="8_yy5rd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8vfca"]
atlas = ExtResource("2_ntlk8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yexf"]
atlas = ExtResource("2_ntlk8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r10rs"]
atlas = ExtResource("2_ntlk8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuest"]
atlas = ExtResource("2_ntlk8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvnki"]
atlas = ExtResource("2_ntlk8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nr0h"]
atlas = ExtResource("2_ntlk8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ccfw"]
atlas = ExtResource("3_ioxp2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5n37"]
atlas = ExtResource("3_ioxp2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spiiv"]
atlas = ExtResource("3_ioxp2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bq63"]
atlas = ExtResource("3_ioxp2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gxuq"]
atlas = ExtResource("3_ioxp2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrwtq"]
atlas = ExtResource("3_ioxp2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ks8d"]
atlas = ExtResource("4_oi7ot")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nwhx"]
atlas = ExtResource("4_oi7ot")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w0i4"]
atlas = ExtResource("4_oi7ot")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayqli"]
atlas = ExtResource("4_oi7ot")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljmmf"]
atlas = ExtResource("4_oi7ot")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pe1j"]
atlas = ExtResource("4_oi7ot")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2ewn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vfca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yexf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r10rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuest")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvnki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nr0h")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ccfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5n37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spiiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bq63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gxuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrwtq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ks8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nwhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w0i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayqli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljmmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pe1j")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6xfi"]
radius = 8.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kh8tv"]
radius = 12.0416

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt03s"]
size = Vector2(16, 16)

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_f3y3q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_f2ewn")
animation = &"death"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_b6xfi")

[node name="Hurtbox" parent="." instance=ExtResource("5_sgjli")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_kh8tv")

[node name="Hitbox" parent="." instance=ExtResource("6_v852v")]
collision_layer = 2
collision_mask = 2
damage = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_gt03s")

[node name="snd_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ugwmn")
volume_db = -34.589
pitch_scale = 6.0

[node name="snd_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_yy5rd")
volume_db = -25.0
pitch_scale = 1.2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
